--- a/dbms/src/GUIs/PtExaminedBy/PtExaminedByDelete.form
+++ b/dbms/src/GUIs/PtExaminedBy/PtExaminedByDelete.form
@@ -105,9 +105,10 @@
         <Component class="javax.swing.JList" name="jList1">
           <Properties>
             <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
-              <StringArray count="2">
-                <StringItem index="0" value="s_id (int)"/>
-                <StringItem index="1" value="s_name (String)"/>
+              <StringArray count="3">
+                <StringItem index="0" value="p_id (int)"/>
+                <StringItem index="1" value="d_id (int)"/>
+                <StringItem index="2" value=" "/>
               </StringArray>
             </Property>
           </Properties>
