--- a/dbms/src/GUIs/Treatment/TreatmentInsert.form
+++ b/dbms/src/GUIs/Treatment/TreatmentInsert.form
@@ -31,7 +31,7 @@
                           <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="102" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="104" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="jTextField1" alignment="0" pref="123" max="32767" attributes="0"/>
                           <Component id="jTextField2" alignment="0" max="32767" attributes="0"/>
@@ -80,12 +80,12 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="s_id"/>
+        <Property name="text" type="java.lang.String" value="t_id"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="s_name"/>
+        <Property name="text" type="java.lang.String" value="t_name"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jTextField1">
