--- a/dbms/src/GUIs/TreatmentFollowed/TreatmentFollowedDelete.form
+++ b/dbms/src/GUIs/TreatmentFollowed/TreatmentFollowedDelete.form
@@ -105,9 +105,12 @@
         <Component class="javax.swing.JList" name="jList1">
           <Properties>
             <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
-              <StringArray count="2">
-                <StringItem index="0" value="s_id (int)"/>
-                <StringItem index="1" value="s_name (String)"/>
+              <StringArray count="5">
+                <StringItem index="0" value="p_id (int)"/>
+                <StringItem index="1" value="tr_id (int)"/>
+                <StringItem index="2" value="dev_by (int)"/>
+                <StringItem index="3" value="result (varchar)"/>
+                <StringItem index="4" value=" "/>
               </StringArray>
             </Property>
           </Properties>
